--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
   "env": {
     "jest": true
   },
-  "extends": "dgeibi"
+  "extends": "dgeibi",
+  "rules": {
+    "no-mixed-operators": "off"
+  }
 }
