--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,11 @@
   "env": {
     "jest": true
   },
-  "extends": "dgeibi",
+  "extends": "dgeibi/react",
   "rules": {
-    "no-mixed-operators": "off"
+    "import/no-extraneous-dependencies": "off",
+    "global-require": "off",
+    "no-mixed-operators": "off",
+    "react/prop-types": "off"
   }
 }
