--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "the-little-cipher",
   "version": "1.0.0",
+  "dist_dir": "dist",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint .",
-    "format": "prettier-eslint --write '**/*.{js,scss}'",
-    "precommit": "lint-staged"
+    "format": "prettier-eslint --write '**/*.{js,css}'",
+    "precommit": "lint-staged",
+    "start": "webpack-dev-server",
+    "start:prod": "npm run build && cd dist && serve",
+    "build": "webpack --env.production"
   },
   "author": "dgeibi",
   "license": "MIT",
@@ -18,23 +22,54 @@
     "printWidth": 90
   },
   "lint-staged": {
-    "*.{scss,js}": [
+    "*.{css,js}": [
       "git-exec-and-restage prettier-eslint --write --"
     ]
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
-    "eslint": "^4.10.0",
+    "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-dva-hmr": "^0.4.0",
+    "babel-plugin-import": "^1.6.2",
+    "babel-plugin-react-css-modules": "^3.3.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.2.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^3.0.6",
+    "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.5.1",
+    "expect": "^21.2.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "git-exec-and-restage": "^1.0.1",
+    "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
-    "lint-staged": "^4.3.0"
+    "lint-staged": "^4.3.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.8",
+    "redbox-react": "^1.5.0",
+    "serve": "^6.4.1",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1"
   },
-  "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "antd": "^3.0.0-rc.1",
+    "babel-polyfill": "^6.26.0",
+    "dva": "^2.1.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dgeibi/the-little-cipher.git"
