添加playfair密码页面

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "antd": "^3.0.0-rc.1",
     "babel-polyfill": "^6.26.0",
     "dva": "^2.1.0",
+    "rc-table": "^6.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   },
