--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-little-cipher",
   "version": "1.0.0",
-  "dist_dir": "dist",
+  "dist_dir": "public",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -9,9 +9,13 @@
     "lint": "eslint .",
     "format": "prettier-eslint --write '**/*.{js,css}'",
     "precommit": "lint-staged",
-    "start": "webpack-dev-server",
-    "start:prod": "npm run build && cd dist && serve",
-    "build": "webpack --env.production"
+    "dev": "nodemon --watch src/server src/server/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "prestart": "npm run build",
+    "start": "node dist/server/index.js",
+    "build": "npm run clean && run-p build:*",
+    "clean": "rimraf public dist",
+    "build:static": "webpack --env.production",
+    "build:server": "babel src -s -D -d dist --ignore front/,*.test.js,test.js"
   },
   "author": "dgeibi",
   "license": "MIT",
@@ -27,6 +31,7 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
@@ -38,35 +43,41 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
+    "dotenv": "^4.0.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^3.0.6",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
-    "expect": "^21.2.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "git-exec-and-restage": "^1.0.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
+    "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
     "redbox-react": "^1.5.0",
-    "serve": "^6.4.1",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "antd": "^3.0.0-rc.1",
     "babel-polyfill": "^6.26.0",
     "dva": "^2.1.0",
+    "express": "^4.16.2",
+    "multer": "^1.3.0",
     "rc-table": "^6.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
