--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "multer": "^1.3.0",
     "rc-table": "^6.1.0",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "unfetch": "^3.0.0"
   },
   "repository": {
     "type": "git",
