--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "format": "prettier-eslint --write '**/*.{js,css}'",
     "precommit": "lint-staged",
-    "dev": "nodemon --watch src/server src/server/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "dev": "nodemon --watch src/server src/server/index.js --exec \"cross-env NODE_ENV=development node -r babel-register\"",
     "prestart": "npm run build",
     "start": "node dist/server/index.js",
     "build": "npm run clean && run-p build:*",
@@ -46,8 +46,8 @@
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
-    "dotenv": "^4.0.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^3.0.6",
