--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier-eslint --write '**/*.{js,css}'",
     "precommit": "lint-staged",
     "dev": "nodemon --watch src/server src/server/index.js --exec \"cross-env NODE_ENV=development node -r babel-register\"",
-    "prestart": "npm run build",
+    "prod": "npm run build && npm start",
     "start": "node dist/server/index.js",
     "build": "npm run clean && run-p build:*",
     "clean": "rimraf public dist",
