--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-little-cipher",
   "version": "1.0.0",
-  "dist_dir": "public",
+  "dist_dir": "dist/static",
   "product_name": "The Little Cipher",
   "scripts": {
     "test": "jest",
@@ -10,14 +10,14 @@
     "lint": "eslint .",
     "format": "prettier-eslint --write '**/*.{js,css}'",
     "precommit": "lint-staged",
-    "dev":
-      "nodemon --watch src/server src/server/index.js --exec \"cross-env NODE_ENV=development node -r babel-register\"",
+    "dev": "nodemon --watch src/server src/server/index.js --exec \"cross-env NODE_ENV=development node -r babel-register\"",
     "prod": "npm run build && npm start",
     "start": "node dist/server/index.js",
     "build": "npm run clean && run-p build:*",
-    "clean": "rimraf public dist",
+    "clean": "rimraf dist",
     "build:static": "webpack --env.production",
-    "build:server": "babel src -s -D -d dist --ignore front/,*.test.js,test.js"
+    "build:server": "babel src -s -D -d dist --ignore server/renderRoute.js,common/,client/,*.test.js,test.js",
+    "build:ssr": "webpack --config webpack.config.ssr.js"
   },
   "author": "dgeibi",
   "license": "MIT",
@@ -28,7 +28,9 @@
     "printWidth": 90
   },
   "lint-staged": {
-    "*.{css,js}": ["git-exec-and-restage prettier-eslint --write --"]
+    "*.{css,js}": [
+      "git-exec-and-restage prettier-eslint --write --"
+    ]
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -52,6 +54,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^3.0.6",
     "eslint-config-standard-react": "^5.0.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -68,20 +71,25 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-middleware": "^1.12.1",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "antd": "^3.0.0-rc.3",
     "babel-polyfill": "^6.26.0",
     "dva": "^2.1.0",
     "express": "^4.16.2",
+    "history": "^4.7.2",
+    "jsdom": "^11.4.0",
+    "jsdom-global": "^3.0.2",
     "multer": "^1.3.0",
     "rc-table": "^6.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-fns": "^1.2.0",
+    "react-router-config": "^1.0.0-beta.4",
     "unfetch": "^3.0.0"
   },
   "repository": {
