--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "dependencies": {
     "antd": "^3.0.0-rc.3",
     "babel-polyfill": "^6.26.0",
+    "compression": "^1.7.1",
     "dva": "^2.1.0",
     "express": "^4.16.2",
     "history": "^4.7.2",
