--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
+    "babel-macros": "^1.2.0",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-dva-hmr": "^0.4.0",
     "babel-plugin-import": "^1.6.2",
@@ -46,6 +47,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
+    "codegen.macro": "^1.0.0",
     "copy-webpack-plugin": "^4.2.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
