--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "import/no-extraneous-dependencies": "off",
     "global-require": "off",
     "no-mixed-operators": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-underscore-dangle": "off"
   },
   "settings": {
     "import/resolver": {
