--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-dom": "^16.1.1",
     "react-fns": "^1.2.0",
     "react-router-config": "^1.0.0-beta.4",
+    "react-router-redux": "^5.0.0-alpha.8",
     "unfetch": "^3.0.0"
   },
   "repository": {
