--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "babel-polyfill": "^6.26.0",
     "compression": "^1.7.1",
     "dva": "^2.1.0",
+    "dva-loading": "^1.0.4",
     "express": "^4.16.2",
     "history": "^4.7.2",
     "jsdom": "^11.4.0",
