--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-fns": "^1.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-redux": "^5.0.0-alpha.8",
+    "reselect": "^3.0.1",
     "unfetch": "^3.0.0"
   },
   "repository": {
