--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "precommit": "lint-staged",
     "dev": "nodemon --watch src/server src/server/index.js --exec \"cross-env NODE_ENV=development node -r babel-register\"",
     "prod": "npm run build && npm start",
+    "postinstall": "npm run build",
     "start": "node dist/server/index.js",
     "build": "npm run clean && run-p build:*",
     "clean": "rimraf dist",
@@ -32,25 +33,9 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-macros": "^1.2.0",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-plugin-dva-hmr": "^0.4.0",
-    "babel-plugin-import": "^1.6.2",
-    "babel-plugin-react-css-modules": "^3.3.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "codegen.macro": "^1.0.0",
-    "copy-webpack-plugin": "^4.2.1",
     "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^3.0.6",
@@ -58,26 +43,40 @@
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "git-exec-and-restage": "^1.0.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
     "nodemon": "^1.12.1",
+    "redbox-react": "^1.5.0",
+    "webpack-dev-middleware": "^1.12.1",
+    "webpack-hot-middleware": "^2.20.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-macros": "^1.2.0",
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "rimraf": "^2.6.2",
+    "babel-plugin-dva-hmr": "^0.4.0",
+    "babel-plugin-import": "^1.6.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "babel-plugin-react-css-modules": "^3.3.2",
+    "style-loader": "^0.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0",
+    "babel-loader": "^7.1.2",
+    "codegen.macro": "^1.0.0",
     "npm-run-all": "^4.1.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
-    "redbox-react": "^1.5.0",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.1",
-    "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0"
-  },
-  "dependencies": {
     "antd": "^3.0.0-rc.3",
     "babel-polyfill": "^6.26.0",
     "compression": "^1.7.1",
