--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "webpack.config.base.js"
+        "config": "config/webpack.base.js"
       }
     }
   }
