--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "start": "node dist/server/index.js",
     "build": "npm run clean && run-p build:*",
     "clean": "rimraf dist",
-    "build:static": "webpack --env.production",
-    "build:server": "babel src -s -d dist --ignore webpack,render,common,client,*.test.js,test.js",
-    "build:ssr": "webpack --config webpack.config.ssr.js"
+    "build:static": "webpack --config config/webpack.config.js --env.production",
+    "build:server": "babel src -s -d dist --ignore webpack,render,common,client,*.test.js,test.js"
   },
   "author": "dgeibi",
   "license": "MIT",
@@ -44,7 +43,6 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
     "git-exec-and-restage": "^1.0.1",
-    "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
@@ -54,39 +52,35 @@
     "webpack-hot-middleware": "^2.20.0"
   },
   "dependencies": {
+    "antd": "^3.0.0-rc.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-macros": "^1.2.0",
     "babel-minify-webpack-plugin": "^0.2.0",
-    "rimraf": "^2.6.2",
+    "html-webpack-plugin": "^2.30.1",
     "babel-plugin-dva-hmr": "^0.4.0",
     "babel-plugin-import": "^1.6.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "babel-plugin-react-css-modules": "^3.3.2",
-    "style-loader": "^0.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0",
-    "babel-loader": "^7.1.2",
     "codegen.macro": "^1.0.0",
-    "npm-run-all": "^4.1.2",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.0.8",
-    "antd": "^3.0.0-rc.3",
-    "babel-polyfill": "^6.26.0",
     "compression": "^1.7.1",
+    "css-loader": "^0.28.7",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
     "jsdom": "^11.4.0",
     "jsdom-global": "^3.0.2",
     "multer": "^1.3.0",
+    "npm-run-all": "^4.1.2",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.8",
     "rc-table": "^6.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -94,7 +88,12 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-redux": "^5.0.0-alpha.8",
     "reselect": "^3.0.1",
-    "unfetch": "^3.0.0"
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
+    "unfetch": "^3.0.0",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "repository": {
     "type": "git",
