--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "npm run clean && run-p build:*",
     "clean": "rimraf dist",
     "build:static": "webpack --config config/webpack.config.js --env.production",
-    "build:server": "babel src -s -d dist --ignore webpack,render,common,client,*.test.js,test.js"
+    "build:server": "webpack --config config/webpack.server.js"
   },
   "author": "dgeibi",
   "license": "MIT",
@@ -53,12 +53,10 @@
   },
   "dependencies": {
     "antd": "^3.0.0-rc.3",
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-macros": "^1.2.0",
     "babel-minify-webpack-plugin": "^0.2.0",
-    "html-webpack-plugin": "^2.30.1",
     "babel-plugin-dva-hmr": "^0.4.0",
     "babel-plugin-import": "^1.6.2",
     "babel-plugin-react-css-modules": "^3.3.2",
@@ -75,6 +73,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^2.30.1",
     "jsdom": "^11.4.0",
     "jsdom-global": "^3.0.2",
     "multer": "^1.3.0",
@@ -89,6 +88,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
+    "source-map-support": "^0.5.0",
     "style-loader": "^0.19.0",
     "unfetch": "^3.0.0",
     "webpack": "^3.8.1",
