--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "webpack-hot-middleware": "^2.20.0"
   },
   "dependencies": {
-    "antd": "^3.0.0-rc.3",
+    "antd": "^3.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-macros": "^1.2.0",
