--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "npm run clean && run-p build:*",
     "clean": "rimraf dist",
     "build:static": "webpack --config config/webpack.client.js --env.production",
-    "build:server": "webpack --config config/webpack.server.js"
+    "build:server": "webpack --config config/webpack.server.js",
+    "analyze": "webpack --config config/webpack.analyzer.js"
   },
   "author": "dgeibi",
   "license": "MIT",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
+    "babel-plugin-dva-hmr": "^0.4.0",
     "babel-register": "^6.26.0",
     "cross-env": "^5.1.1",
     "eslint": "^4.11.0",
@@ -48,6 +50,7 @@
     "lint-staged": "^4.3.0",
     "nodemon": "^1.12.1",
     "redbox-react": "^1.5.0",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-middleware": "^1.12.1",
     "webpack-hot-middleware": "^2.20.0"
   },
@@ -57,7 +60,6 @@
     "babel-loader": "^7.1.2",
     "babel-macros": "^1.2.0",
     "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-plugin-dva-hmr": "^0.4.0",
     "babel-plugin-import": "^1.6.2",
     "babel-plugin-react-css-modules": "^3.3.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -74,8 +76,6 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
-    "jsdom": "^11.4.0",
-    "jsdom-global": "^3.0.2",
     "multer": "^1.3.0",
     "npm-run-all": "^4.1.2",
     "postcss-cssnext": "^3.0.2",
@@ -85,7 +85,6 @@
     "react-dom": "^16.2.0",
     "react-fns": "^1.2.0",
     "react-router-config": "^1.0.0-beta.4",
-    "react-router-redux": "^5.0.0-alpha.8",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.0",
