--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "format": "prettier-eslint --write '**/*.{js,css}'",
     "precommit": "lint-staged",
-    "dev": "nodemon --watch src/server src/server/index.js --exec \"cross-env NODE_ENV=development node -r babel-register\"",
+    "dev": "nodemon --watch src/server src/server/dev.js --exec \"node -r babel-register\"",
     "prod": "npm run build && npm start",
     "postinstall": "npm run build",
     "start": "node dist/server/index.js",
@@ -36,7 +36,6 @@
     "babel-eslint": "^8.0.3",
     "babel-plugin-dva-hmr": "^0.4.0",
     "babel-register": "^6.26.0",
-    "cross-env": "^5.1.1",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^3.0.6",
