--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,css}\" --ignore-path .gitignore",
     "precommit": "lint-staged",
-    "dev": "nodemon --watch src/server src/server/dev.js --exec \"node -r babel-register\"",
+    "dev": "nodemon --watch src/server src/server/dev.js --exec \"node -r @babel/register\"",
     "prod": "npm run build && npm start",
     "postinstall": "npm run build",
     "start": "node dist/server/index.js",
@@ -27,9 +27,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/register": "^7.0.0-beta.35",
     "babel-eslint": "^8.1.1",
+    "babel-jest": "^22.0.4",
     "babel-plugin-dva-hmr": "^0.4.0",
-    "babel-register": "^6.26.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-dgeibi": "^4.0.0",
@@ -39,7 +40,7 @@
     "eslint-plugin-react": "^7.5.1",
     "git-exec-and-restage": "^1.0.1",
     "husky": "^0.14.3",
-    "jest": "^21.2.1",
+    "jest": "^22.0.4",
     "lint-staged": "^6.0.0",
     "nodemon": "^1.12.5",
     "prettier": "^1.9.2",
@@ -49,19 +50,18 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.35",
+    "@babel/polyfill": "^7.0.0-beta.35",
+    "@babel/preset-env": "^7.0.0-beta.35",
+    "@babel/preset-react": "^7.0.0-beta.35",
+    "@babel/preset-stage-3": "^7.0.0-beta.35",
     "antd": "^3.0.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-macros": "^1.2.0",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-plugin-import": "^1.6.2",
+    "babel-plugin-import": "^1.6.3",
     "babel-plugin-react-css-modules": "^3.3.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "codegen.macro": "^1.0.0",
     "compression": "^1.7.1",
     "css-loader": "^0.28.7",
     "dva": "^2.1.0",
