--- a/package.json
+++ b/package.json
@@ -56,9 +56,8 @@
     "@babel/preset-react": "^7.0.0-beta.35",
     "@babel/preset-stage-3": "^7.0.0-beta.35",
     "antd": "^3.0.0",
-    "babel-loader": "^8.0.0-beta.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-react-css-modules": "^3.3.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -84,6 +83,7 @@
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.0",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "unfetch": "^3.0.0",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1",
