--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,17 @@
   "compilerOptions": {
     "target": "ESNext",
     "experimentalDecorators": true,
-    "jsx": "react"
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "baseUrl": ".",
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
