--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "compression": "^1.7.1",
     "css-loader": "^0.28.8",
     "dva": "^2.1.0",
+    "dva-hot": "0.0.1",
     "dva-loading": "^1.0.4",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
