--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.0.4",
     "eslint": "^4.16.0",
     "eslint-config-dgeibi": "^4.1.0",
@@ -42,17 +43,15 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
-    "@babel/register": "^7.0.0-beta.37",
-    "@babel/core": "^7.0.0-beta.37",
-    "@babel/polyfill": "^7.0.0-beta.37",
-    "@babel/preset-env": "^7.0.0-beta.37",
-    "@babel/preset-react": "^7.0.0-beta.37",
-    "@babel/preset-stage-3": "^7.0.0-beta.37",
-    "antd": "^3.1.1",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/core": "7.0.0-beta.40",
+    "@babel/polyfill": "7.0.0-beta.40",
+    "@babel/preset-env": "7.0.0-beta.40",
+    "@babel/preset-react": "7.0.0-beta.40",
+    "@babel/preset-stage-3": "7.0.0-beta.40",
+    "antd": "^3.2.1",
     "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-import": "^1.6.3",
-    "babel-plugin-react-css-modules": "^3.3.2",
+    "babel-plugin-import": "^1.6.5",
+    "babel-plugin-react-css-modules": "^3.3.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "compression": "^1.7.1",
     "css-loader": "^0.28.8",
@@ -75,11 +74,12 @@
     "react-router-config": "^1.0.0-beta.4",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
+    "simple-prerender-webpack-plugin": "0.0.2",
     "source-map-support": "^0.5.0",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "unfetch": "^3.0.0",
-    "webpack": "^3.10.0",
+    "webpack": "^3.11.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
   },
