--- a/package.json
+++ b/package.json
@@ -27,20 +27,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/register": "^7.0.0-beta.40",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^22.0.4",
-    "eslint": "^4.16.0",
+    "babel-jest": "^22.4.1",
+    "eslint": "^4.18.2",
     "eslint-config-dgeibi": "^4.1.0",
     "git-exec-and-restage": "^1.0.1",
     "husky": "^0.14.3",
-    "jest": "^22.0.4",
-    "lint-staged": "^6.0.0",
-    "nodemon": "^1.12.5",
-    "prettier": "^1.9.2",
+    "jest": "^22.4.2",
+    "lint-staged": "^6.1.1",
+    "nodemon": "^1.17.1",
+    "prettier": "^1.11.1",
     "redbox-react": "^1.5.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-middleware": "^3.0.1",
+    "webpack-hot-middleware": "^2.21.2"
   },
   "dependencies": {
     "@babel/core": "7.0.0-beta.40",
@@ -48,39 +49,40 @@
     "@babel/preset-env": "7.0.0-beta.40",
     "@babel/preset-react": "7.0.0-beta.40",
     "@babel/preset-stage-3": "7.0.0-beta.40",
-    "antd": "^3.2.1",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-import": "^1.6.5",
+    "antd": "^3.2.3",
+    "babel-loader": "^8.0.0-beta.2",
+    "babel-plugin-import": "^1.6.6",
     "babel-plugin-react-css-modules": "^3.3.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "compression": "^1.7.1",
-    "css-loader": "^0.28.8",
+    "compression": "^1.7.2",
+    "css-loader": "^0.28.10",
     "dva": "^2.1.0",
     "dva-hot": "^0.2.0",
     "dva-loading": "^1.0.4",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "history": "^4.7.2",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.0",
     "multer": "^1.3.0",
     "npm-run-all": "^4.1.2",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.0.9",
-    "rc-table": "^6.1.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.1",
+    "rc-table": "^6.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-fns": "^1.3.0",
+    "react-fns": "^1.4.0",
     "react-helmet": "^5.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
-    "simple-prerender-webpack-plugin": "^2.1.0",
-    "source-map-support": "^0.5.0",
-    "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "simple-prerender-webpack-plugin": "^3.0.0",
+    "source-map-support": "^0.5.3",
+    "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "unfetch": "^3.0.0",
-    "webpack": "^3.11.0",
-    "webpack-merge": "^4.1.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   },
   "env": {
