use react-media directly

--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "rc-table": "^6.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-fns": "^1.4.0",
     "react-helmet": "^5.2.0",
+    "react-media": "^1.8.0",
     "react-router-config": "^1.0.0-beta.4",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
