--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/register": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.44",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.1",
     "eslint": "^4.18.2",
@@ -36,20 +36,21 @@
     "husky": "^0.14.3",
     "jest": "^22.4.2",
     "lint-staged": "^6.1.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.17.1",
     "prettier": "^1.11.1",
     "redbox-react": "^1.5.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-middleware": "^3.0.1",
+    "webpack-dev-middleware": "^3.1.2",
     "webpack-hot-middleware": "^2.21.2"
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.40",
-    "@babel/polyfill": "7.0.0-beta.40",
-    "@babel/preset-env": "7.0.0-beta.40",
-    "@babel/preset-react": "7.0.0-beta.40",
-    "@babel/preset-stage-3": "7.0.0-beta.40",
-    "antd": "^3.2.3",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/polyfill": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.0.0-beta.44",
+    "@babel/preset-stage-3": "^7.0.0-beta.44",
+    "antd": "^3.4.0",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-import": "^1.6.6",
     "babel-plugin-react-css-modules": "^3.3.3",
@@ -60,9 +61,8 @@
     "dva-hot": "^0.2.0",
     "dva-loading": "^1.0.4",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "history": "^4.7.2",
-    "html-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "multer": "^1.3.0",
     "npm-run-all": "^4.1.2",
     "postcss-cssnext": "^3.1.0",
@@ -75,15 +75,15 @@
     "react-router-config": "^1.0.0-beta.4",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
-    "simple-prerender-webpack-plugin": "^3.0.0",
+    "simple-prerender-webpack-plugin": "^3.1.2",
     "source-map-support": "^0.5.3",
     "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "unfetch": "^3.0.0",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.10",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
     "webpack-merge": "^4.1.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "env": {
     "NODE_ENV": "production"
